# recipy

./: .flake8  .gitignore  README.md  requirements.txt  setup.cfg
recipy/: __main__.py
src/recipy/: __init__.py  __main__.py  schemas.py  scraper.py
src/recipy/cmds/: recipy.py
src/recipy/exports/yaml/: __init__.py
src/recipy/providers/: __init__.py  base.py  exceptions.py  hellofresh.py  utils.py
tests/: test_hellofresh.html  test_schema.py  test_scraper_hellofresh.py
