[metadata]
name = recipy-emilylockhart
version = attr: recipy.VERSION
author = Emily Lockhart
author_email = emilylockhart@protonmail.com
description = Scrape recipes to YAML. Supports Hello Fresh.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/emilywilder/recipy
project_urls =
    Bug Tracker = https://github.com/emilywilder/recipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Text Processing :: Markup :: HTML

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    recipy = recipy.cmds.recipy:main